// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pragma-nodocblock.php 1`] = `
<div>
  inline stuff up top
</div>

<?php

echo "Hello World";

// non-docblock comment
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  inline stuff up top
</div>

<?php /** @format */
echo "Hello World";

// non-docblock comment

`;

exports[`pragma-sparsedocblock.php 1`] = `
<?php
/**
 * This docblock doesn't have any pragma in it yet.
 */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * This docblock doesn't have any pragma in it yet.
 * @format
 */

echo "Hello World";

`;

exports[`pragma-weirddocblock.php 1`] = `
<?php
/** edge case docblock */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * edge case docblock
 * @format
 */

echo "Hello World";

`;

exports[`pragma-weirddocblock-alt.php 1`] = `
<?php
/** @edge 
 * case */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/** @edge
 * @format
 * case */

echo "Hello World";

`;

exports[`pragma-withdocblock.php 1`] = `
<?php
/**
 * This is a preexisting docblock which will receive a "format" pragma
 *
 * @author    Bob Bobberson
 * @copyright Doge Inc. 2018 - All Rights Reserved
 */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * This is a preexisting docblock which will receive a "format" pragma
 *
 * @format
 * @author    Bob Bobberson
 * @copyright Doge Inc. 2018 - All Rights Reserved
 */

echo "Hello World";

`;
